--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 <head>
 	<title>Parcel Sandbox</title>
 	<meta charset="UTF-8" />
+	<script
+		type="module"
+      	src="https://cdn.jsdelivr.net/npm/d4-temp-sensor@0.0.1"
+    ></script>
 </head>
 
 <body>
-	<div id="app"></div>
+	<h1>Hello dimensions:</h1>
 
-	<script src="src/index.js">
-	</script>
+	<d4-temperature-sensor latitude="42" longitude="24"></d4-temperature-sensor>
 </body>
 
 </html>
